# project-copilot-workbench

./: .gitattributes  .gitignore  .gitleaks.toml  NOTICE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  package.json  pnpm-lock.yaml  pyproject.toml  requirements.build.in  requirements.codex.in  requirements.documents-ci.in  upstream-lock.yaml
.github/workflows/: ci.yml
config/: company-v2.example.ps1  company.example.ps1
docs/: AGENTIC_RAG_CHECKPOINT.md  AGENTIC_RAG_TASK_EVENTS.jsonl  AGENTIC_RAG_TASK_LEDGER.json  CODEX_RUNTIME_CHECKPOINT.md  CODEX_RUNTIME_TASK_EVENTS.jsonl  CODEX_RUNTIME_TASK_LEDGER.json  V2_CHECKPOINT.md  V2_TASK_EVENTS.jsonl  V2_TASK_LEDGER.json  acceptance-checklist.md  admin-user-guide.md  agentic-rag-direction-handoff.md  architecture.md  codex-runtime-deployment.md  company-agent-handoff.md  company-deployment-v2.md  company-deployment.md  evaluation.md  light-rag-direct-deploy.md  project-package.md
docs/adr/: 002-v2-governed-workspace-agent.md  003-defrost-temporal-diagnostics.md
docs/research/: 2026-07-15-architecture-gap-review.md  2026-07-15-recent-rag-shortlist.md  2026-07-15-v2-framework-selection.md  2026-07-16-hvac-engineer-benchmark.md  2026-07-17-agentic-rag-platform-recheck.md  2026-07-18-four-version-architecture-study.md  2026-07-19-obsidian-evidence-graph-selection.md  2026-07-21-opencode-runtime-comparison.md
evaluation/: __init__.py  adjudicate_agentic_rag_result.py  agentic_rag_bakeoff.json  four_version_complex_questions.json  gold_cases.json  hvac_role_benchmark.json  opencode_codex_comparison_cases_20260721.json  run_agentic_rag_bakeoff.py  run_agentic_rag_candidate.py  run_four_version_complex_benchmark.py  run_hvac_role_benchmark.py  run_offline.py  test_agentic_rag_adjudication.py  test_agentic_rag_bakeoff.py  test_agentic_rag_candidate.py  test_agentic_rag_gold.py  test_four_version_complex_benchmark.py  test_four_version_complex_questions.py  test_hvac_role_benchmark.py  test_offline_evaluation.py  test_opencode_codex_comparison_contract.py
evaluation/results/: agentic-hvac-gold.json  agentic-rag-haystack-duckdb-live-v35-adjudication.json  agentic-rag-haystack-duckdb-live-v35.json  codex-sdk-contract-baseline-20260719.json  deterministic-baseline.json  four-version-shared-backend-live.json  (+10 more)
scripts/: bootstrap-codex-runtime.ps1  bootstrap.cmd  bootstrap.ps1  generate_agentic_hvac_bakeoff.py  generate_synthetic_defrost.py  prefetch_docling_assets.py  run-codex.ps1  run.cmd  run.ps1  verify.cmd  verify.ps1  verify_distribution_contents.py
security/: forbidden_patterns.example.yaml  threat_model.md
tests/: test_analysis_intents.py  test_analytics.py  test_anythingllm_adapter.py  test_browser_acceptance.py  test_cli.py  test_codex_runtime.py  test_company_api.py  test_defrost_diagnostics.py  test_direction_agent.py  test_direction_demo.py  test_distribution_contents.py  test_docling_integration.py  test_governed_analytics_v2.py  test_hvac_snapshot_inspection.py  test_knowledge.py  test_opencode_runtime.py  test_packaging.py  test_private_catalog.py  test_project_agent_v2.py  test_project_contract.py  test_provider_selection.py  test_release_docs_v2.py  test_release_guard.py  test_sql_guard.py  test_web_app.py  test_web_v2.py  test_workspaces_v2.py  test_zero_egress.py
(+105 files in other folders)
